um-utils: Don't allow duplicates of the same suggestion

Fix the initial value for the suggested login name can be added twice if
there is only one word.

https://bugzilla.gnome.org/show_bug.cgi?id=698234